sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:13: error: ';' expected but integer literal found.
      }fin -=1
             ^AlgCocktailSort2:21: error: ';' expected but integer literal found.
    }debut +=1 
             ^